# global-intel-platform

./: .coderabbit.yaml  .env.example  .gitignore  README.md  docker-compose.yml  nginx.conf
api-gateway/: .env.example  Dockerfile  package.json  redisSubscriber.js  server.js  websocketManager.js
api-gateway/routes/: events.js  governance.js  health.js  intelligence.js  observability.js
backend/: .env.example  cyber_breach_model.json  forensicLibrary.json  package.json  server.js  test-request.json  validation.json
chaos/: run_all.sh  test_anchor_integrity.sh  test_break_glass_tiers.sh  test_canary_leak.sh  test_redis_disconnect.sh  test_token_revocation.sh  test_websocket_flood.sh
chaos/lib/: common.sh
docs/: ARCHITECTURE.md  CORE_PHILOSOPHY.md  HANDOVER.md  IMPLEMENTATION_DETAIL.md  PRD.md  USAGE.md  WALKTHROUGH.md
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.css  App.jsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
intelligence-engine/: .env.example  Dockerfile  config.py  main.py  requirements.txt
intelligence-engine/analysis/: GeoTemporalProcessor.py  PatternCorrelationEngine.py
intelligence-engine/event_bus/: EventStreamOrchestrator.py
intelligence-engine/ingestion/: acled_gdelt_service.py  aircraft_service.py  airport_service.py  canary_service.py  cii_service.py  finance_service.py  fleet_service.py  gnss_service.py  infrastructure_service.py  news_service.py  oref_service.py  scheduler.py  (+5 more)
(+49 files in other folders)
